# blinky

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrate  LICENSE  README.md  docker-compose.dev.yml  docker-init-db.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  security.yml
.sqlx/: query-1c96423cf1eaf177f554ac8f5dcae25b78ba3fd55e57bf73914e7440c60f7eaa.json  query-2ae75fc0c90f3fab5640351c786787e105d0a13f247b1775dfd3e1e480b53faf.json  query-2fc7679f010f59806ed1f8105b7d5009ccd063ed5f4bd947d6a7bc89d22038d9.json  query-38b115a57f2081ac8711fa3d30741115d3a47f00b313e4fff32799a9e3abe99b.json  query-583f946b5ba1ae7ceb6a5b2acfdf4aee22f6f110b7258df2839c1d18d3f9d8f7.json  query-a8b6d3cb8f95b030dca3f0b9eed5fcfbf089c2cbe184e205ba13d6cb57fe8f38.json
migrations/: 20250808144845_init.sql
src/: config.rs  cors.rs  error.rs  lib.rs  logging.rs  main.rs  startup.rs  state.rs
src/analytics/: error.rs  mod.rs  queue.rs  worker.rs
src/routes/: health.rs  mod.rs  redirect.rs  shorten.rs  stats.rs
src/shortcode/: base58.rs  mod.rs
src/storage/: cached.rs  mod.rs  postgresql.rs
tests/: integration_test.rs  redis_integration_test.rs
